--- a/src/index.html
+++ b/src/index.html
@@ -216,7 +216,7 @@
           <line x1="18" y1="6" x2="6" y2="18"></line>
           <line x1="6" y1="6" x2="18" y2="18"></line>
         </svg>
-        <li>Учавствовать</li>
+        <li onclick='openModal()'>Учавствовать</li>
         <li>О нас</li>
         <li>Контакты</li>
       </ul>
