--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="./../dist/css/styles.css" />
+    <link rel="stylesheet" href="./../fonts/CeraPro/stylesheet.css">
     <script src="./index.js" defer></script>
   </head>
   <body>
@@ -340,7 +341,7 @@
           </form>
         </div>
       </div>
-      <!-- <iframe src="https://www.youtube.com/embed/i1RkJLpeD80" allowfullscreen class="video" frameborder="0"></iframe> -->
+      <iframe src="https://www.youtube.com/embed/i1RkJLpeD80" allowfullscreen class="video" frameborder="0"></iframe>
       <!-- <img src="./img/video.png" class="video" alt=""> -->
     </section>
     <section class="countdown">
